--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "inert-polyfill": "^0.2.5",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.14",
     "vue": "^3.5.13"
   },
